# psox

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
psox/: __init__.py  __main__.py  core.py  process.py  soxtypes.py  synth.py  types.py  ukulele.py
src/psox/: __init__.py  core.py  demo.py  embed.py  helpers.py  process.py  soxtypes.py  synth.py
src/psox/support/: embed_sox.cmd
tests/: context.py  locator.py  test_basic.py
