[metadata]
name = psox
description = Encapsulation process sox.exe
long_description = file: README.md
url = https://github.com/tulare/psox
author = Tulare Regnus
author_email = tulare.paxgalactica@gmail.com

[bdist_wheel]
universal = True

[options]
install_requires =
zip_safe = False
include_package_data = True
packages = find:
test_suite = nose.collector
tests_require = 
	nose

[options.packages.find]
where = src

[options.package_data]
	
[options.data_files]